--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<div id="intro">
 						<h1>Smart Parking<br />
 						System(Parkinheimer)</h1>
-						<p>Welcome to our team's website.</p>
+						<p>Welcome to our team's website. This website represents our hardwork while building this smart parking system prototype
+						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
