--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Smart Parking<br />
-						System(Parkinheimer)</h1>
+						<h1>Welcome to Parkinheimer: <br />
+						Your Gateway to a Smarter Parking Experience!</h1>
 						<p>Welcome to our team's website. This website represents our hardwork while building this smart parking system prototype
 						</p>
 						<ul class="actions">
