--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Welcome to Parkinheimer: <br />
-						Your Gateway to a Smarter Parking Experience!</h1>
+						Gateway to a Smarter Parking Experience!</h1>
 						<p>In a world where time is precious and convenience is key, finding a parking spot can often feel like an arduous task. But fear not, for Parkinheimer is here to revolutionize your parking experience!
 						</p>
 						<ul class="actions">
