--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 									<span class="date">September 6, 2023</span>
 									<h2><a href="#">And this is a<br />
 									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>$ students of AITM studying in 2nd semster BSc Cit have started their own IoT project.
+									They've named it Parkinheimer after their project which is smart parking system.
+									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
