--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<span class="date">September 6, 2023</span>
 									<h2><a href="#">And this is a<br />
 									massive headline</a></h2>
-									<p>$ students of AITM studying in 2nd semster BSc Cit have started their own IoT project.
+									<p>Students of AITM studying in 2nd semster BSc Cit have started their own IoT project.
 									They've named it Parkinheimer after their project which is smart parking system.
 									</p>
 								</header>
