--- a/elements.html
+++ b/elements.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">About the Smart Parking System</a>
 					</header>
 
 				<!-- Nav -->
