--- a/generic.html
+++ b/generic.html
@@ -5,6 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>About Us</title>
@@ -51,7 +52,7 @@
 
             <!-- Team Member 1 -->
             <div class="team-member">
-                <img src="images/aadarsha.jpg" alt="Aadarsha Sunam Pariyar" class="team-img" />
+                <img src="images/2x2.jpg" alt="Aadarsha Sunam Pariyar" class="team-img" width="200" height="200" />
                 <h2>Aadarsha Sunam Pariyar</h2>
                 <p>Software Developer & Frontend Developer</p>
                 <p>Aadarsha is a highly skilled software developer with expertise in frontend development. He plays a key role in crafting the user-friendly interface of our smart parking system, ensuring a seamless experience for our users.</p>
@@ -110,8 +111,7 @@
         <section class="split contact">
             <section class="alt">
                 <h3>Address</h3>
-                <p>1234 Somewhere Road #87257<br />
-                    Nashville, TN 00000-0000</p>
+                <p>Lalitpur, Bagmati, Nepal</p>
             </section>
             <section>
                 <h3>Phone</h3>
@@ -151,3 +151,4 @@
 
 </body>
 </html>
+
