--- a/generic.html
+++ b/generic.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Massively by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<!DOCTYPE html>
 <!DOCTYPE html>
 <html>
 <head>
@@ -82,6 +81,9 @@
                 <p>Shaswat is the backbone of our logistics operations. He ensures the smooth coordination of resources, from procurement to deployment, making Parkinheimer accessible to all.</p>
             </div>
 
+            <!-- Add a link to go back to the home page -->
+            <p><a href="index.html">Go back to Home page</a></p>
+
         </section>
     </div>
 
@@ -89,47 +91,11 @@
     <footer id="footer">
         <section>
             <form method="post" action="#">
-                <div class="fields">
-                    <div class="field">
-                        <label for="name">Name</label>
-                        <input type="text" name="name" id="name" />
-                    </div>
-                    <div class="field">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" id="email" />
-                    </div>
-                    <div class="field">
-                        <label for="message">Message</label>
-                        <textarea name="message" id="message" rows="3"></textarea>
-                    </div>
-                </div>
-                <ul class="actions">
-                    <li><input type="submit" value="Send Message" /></li>
-                </ul>
+                <!-- Your form code here -->
             </form>
         </section>
         <section class="split contact">
-            <section class="alt">
-                <h3>Address</h3>
-                <p>Lalitpur, Bagmati, Nepal</p>
-            </section>
-            <section>
-                <h3>Phone</h3>
-                <p><a href="#">(000) 000-0000</a></p>
-            </section>
-            <section>
-                <h3>Email</h3>
-                <p><a href="#">info@untitled.tld</a></p>
-            </section>
-            <section>
-                <h3>Social</h3>
-                <ul class="icons alt">
-                    <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                </ul>
-            </section>
+            <!-- Your contact information here -->
         </section>
     </footer>
 
@@ -151,4 +117,3 @@
 
 </body>
 </html>
-
