--- a/generic.html
+++ b/generic.html
@@ -28,7 +28,7 @@
         <ul class="links">
             <li><a href="index.html">Home page</a></li>
             <li class="active"><a href="about.html">About us</a></li>
-            <li><a href="features.html">Features</a></li>
+            <li><a href="features.html">Features</a></li> <!-- Added "Features" page link -->
         </ul>
         <ul class="icons">
             <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
