--- a/generic.html
+++ b/generic.html
@@ -27,8 +27,8 @@
     <nav id="nav">
         <ul class="links">
             <li><a href="index.html">Home page</a></li>
-            <li class="active"><a href="about.html">About us</a></li>
-            <li><a href="features.html">Features</a></li> <!-- Added "Features" page link -->
+            <li class="active"><a href="generic.html">About us</a></li>
+            <li><a href="features.html">elements.html</a></li> <!-- Added "Features" page link -->
         </ul>
         <ul class="icons">
             <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
