--- a/generic.html
+++ b/generic.html
@@ -51,7 +51,7 @@
 
             <!-- Team Member 1 -->
             <div class="team-member">
-                <img src="images/2x2.jpg" alt="Aadarsha Sunam Pariyar" class="team-img" width="200" height="200" />
+                <img src="2x2.jpg" alt="Aadarsha Sunam Pariyar" class="team-img" width="200" height="200" />
                 <h2>Aadarsha Sunam Pariyar</h2>
                 <p>Software Developer & Frontend Developer</p>
                 <p>Aadarsha is a highly skilled software developer with expertise in frontend development. He plays a key role in crafting the user-friendly interface of our smart parking system, ensuring a seamless experience for our users.</p>
