--- a/generic.html
+++ b/generic.html
@@ -23,20 +23,21 @@
         <a href="index.html" class="logo">Parkinheimer</a>
     </header>
 
-    <!-- Nav -->
-    <nav id="nav">
-        <ul class="links">
-            <li><a href="index.html">Home page</a></li>
-            <li class="active"><a href="generic.html">About us</a></li>
-            <li><a href="features.html">elements.html</a></li> <!-- Added "Features" page link -->
-        </ul>
-        <ul class="icons">
-            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-            <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-        </ul>
-    </nav>
+   <!-- Nav -->
+<nav id="nav">
+    <ul class="links">
+        <li><a href="index.html">Home page</a></li>
+        <li><a href="generic.html">About us</a></li>
+        <li><a href="elements.html">Features</a></li>
+    </ul>
+    <ul class="icons">
+        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+        <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+    </ul>
+</nav>
+
 
     <!-- Main -->
     <div id="main">
