--- a/elements.html
+++ b/elements.html
@@ -68,7 +68,7 @@
                     Jumper wires are essential for making electrical connections between various components of the Smart Parking System.
                     They ensure reliable and efficient communication.
                 </p>
-                <span class="image fit"><img src="images/jumper_wires.jpg" alt="Jumper Wires" /></span>
+                <span class="image fit"><img src="images/jumper wire.jpg" alt="Jumper Wires" /></span>
 
                 <h2>Features</h2>
                 <p>
