--- a/elements.html
+++ b/elements.html
@@ -40,35 +40,35 @@
                     The Arduino Mega 2560 is a microcontroller board based on the ATmega2560. It's the heart of our Smart Parking System,
                     responsible for controlling various components and processing data.
                 </p>
-                <span class="image fit"><img src="images/arduino mega 2560.png" alt="Arduino Mega 2560" /></span>
+                <span class="image fit"><img src="images/arduino mega 2560.png" alt="Arduino Mega 2560" style="width: 200px; height: 150px;" /></span>
 
                 <h2>IR Sensors</h2>
                 <p>
                     IR (Infrared) sensors are used to detect the presence of vehicles in parking slots. They emit and receive infrared
                     signals, allowing us to determine whether a parking slot is occupied or vacant.
                 </p>
-                <span class="image fit"><img src="images/ir sensor.png" alt="IR Sensors" /></span>
+                <span class="image fit"><img src="images/ir sensor.png" alt="IR Sensors" style="width: 200px; height: 150px;" /></span>
 
                 <h2>Servo Motor</h2>
                 <p>
                     A servo motor is used to control the movement of barriers or gates at the entrance and exit of the parking area.
                     It ensures secure access control.
                 </p>
-                <span class="image fit"><img src="images/servo motor.png" alt="Servo Motor" /></span>
+                <span class="image fit"><img src="images/servo motor.png" alt="Servo Motor" style="width: 200px; height: 150px;" /></span>
 
                 <h2>16x2 LCD with I2C</h2>
                 <p>
                     The 16x2 LCD display with I2C interface is used to provide real-time information to users. It displays parking
                     slot occupancy status and other relevant information.
                 </p>
-                <span class="image fit"><img src="images/lcd with i2c.png" alt="16x2 LCD with I2C" /></span>
+                <span class="image fit"><img src="images/lcd with i2c.png" alt="16x2 LCD with I2C" style="width: 200px; height: 150px;" /></span>
 
                 <h2>Jumper Wires</h2>
                 <p>
                     Jumper wires are essential for making electrical connections between various components of the Smart Parking System.
                     They ensure reliable and efficient communication.
                 </p>
-                <span class="image fit"><img src="images/jumper wire.jpg" alt="Jumper Wires" /></span>
+                <span class="image fit"><img src="images/jumper wire.jpg" alt="Jumper Wires" style="width: 200px; height: 150px;" /></span>
 
                 <h2>Features</h2>
                 <p>
@@ -136,4 +136,3 @@
     <script src="assets/js/main.js"></script>
 </body>
 </html>
-
