--- a/elements.html
+++ b/elements.html
@@ -102,15 +102,15 @@
             <section class="split contact">
                 <section class="alt">
                     <h3>Address</h3>
-                    <p>1234 Somewhere Road #87257<br />Nashville, TN 00000-0000</p>
+                    <p>Khumaltar,lalitpur<br />Bagmati, Nepal</p>
                 </section>
                 <section>
                     <h3>Phone</h3>
-                    <p><a href="#">(000) 000-0000</a></p>
+                    <p><a href="#">+977 9800000000</a></p>
                 </section>
                 <section>
                     <h3>Email</h3>
-                    <p><a href="#">info@untitled.tld</a></p>
+                    <p><a href="#">abc@aitm.edu.np</a></p>
                 </section>
                 <section>
                     <h3>Social</h3>
