added team member's photos

--- a/generic.html
+++ b/generic.html
@@ -60,7 +60,7 @@
 
             <!-- Team Member 2 -->
             <div class="team-member">
-                <img src="images/aswin.jpg" alt="Aswin Rai" class="team-img" />
+                <img src="images/aswin pic.jpg" alt="Aswin Rai" class="team-img" />
                 <h2>Aswin Rai</h2>
                 <p>Video Editor</p>
                 <p>Aswin is our video editing maestro, responsible for creating captivating visual content that showcases the functionality and benefits of Parkinheimer. His creative touch brings our project to life.</p>
@@ -68,7 +68,7 @@
 
             <!-- Team Member 3 -->
             <div class="team-member">
-                <img src="images/ratik.jpg" alt="Ratik Bajracharya" class="team-img" />
+                <img src="images/ratik pic.jpg" alt="Ratik Bajracharya" class="team-img" />
                 <h2>Ratik Bajracharya</h2>
                 <p>Hardware Specialist</p>
                 <p>Ratik is our hardware guru, dedicated to optimizing the technical aspects of our smart parking system. His expertise ensures the reliability and efficiency of our hardware components.</p>
@@ -76,7 +76,7 @@
 
             <!-- Team Member 4 -->
             <div class="team-member">
-                <img src="images/shaswat.jpg" alt="Shaswat Ghimire" class="team-img" />
+                <img src="images/shaswat pic.jpg" alt="Shaswat Ghimire" class="team-img" />
                 <h2>Shaswat Ghimire</h2>
                 <p>Logistics Manager</p>
                 <p>Shaswat is the backbone of our logistics operations. He ensures the smooth coordination of resources, from procurement to deployment, making Parkinheimer accessible to all.</p>
