--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 -->
 <html>
 <head>
-    <title>Home page</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <title>Parkinheimer - Smarter Parking Experience</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -19,8 +19,7 @@
 
     <!-- Intro -->
     <div id="intro">
-        <h1>Welcome to Parkinheimer: <br />
-            Gateway to a Smarter Parking Experience!</h1>
+        <h1>Welcome to Parkinheimer: <br />Gateway to a Smarter Parking Experience!</h1>
         <p>In a world where time is precious and convenience is key, finding a parking spot can often feel like an arduous task. But fear not, for Parkinheimer is here to revolutionize your parking experience!</p>
         <ul class="actions">
             <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -54,10 +53,8 @@
         <article class="post featured">
             <header class="major">
                 <span class="date">September 6, 2023</span>
-                <h2><a href="#">And this is a<br />
-                        massive headline</a></h2>
-                <p>Students of AITM studying in the 2nd semester of BSc CIT have started their own IoT project.
-                    They've named it Parkinheimer after their project, which is a smart parking system.</p>
+                <h2><a href="#">And this is a<br />massive headline</a></h2>
+                <p>Students of AITM studying in the 2nd semester of BSc CIT have started their own IoT project. They've named it Parkinheimer after their project, which is a smart parking system.</p>
             </header>
             <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
             <ul class="actions special">
@@ -65,9 +62,16 @@
             </ul>
         </article>
 
-        <!-- Posts -->
-        <section class="posts">
-            <!-- Add more articles here if needed -->
+        <!-- Why We Created Parkinheimer -->
+        <section>
+            <h2>Why We Created Parkinheimer</h2>
+            <p>In a world where time is precious and convenience is key, finding a parking spot can often feel like an arduous task. Parkinheimer was born out of the need to address the following real-world problems:</p>
+            <ul>
+                <li><strong>Parking Congestion:</strong> Urban areas face limited parking spaces, resulting in congestion and traffic issues.</li>
+                <li><strong>Environmental Impact:</strong> Endless searching for parking leads to fuel waste and increased pollution.</li>
+                <li><strong>Inefficient Space Management:</strong> Traditional parking lots lack efficient management, causing poor space utilization.</li>
+            </ul>
+            <p>Parkinheimer's Smart Parking System provides real-time slot availability, optimizes space utilization, and offers several advantages for a more convenient, efficient, and sustainable parking experience.</p>
         </section>
 
         <!-- Footer -->
@@ -86,44 +90,6 @@
         </footer>
 
     </div>
-
-    <!-- Footer -->
-    <footer id="footer">
-        <section>
-            <h2>Why We Created Parkinheimer</h2>
-            <p>In a world where time is precious and convenience is key, finding a parking spot can often feel like an arduous task. Parkinheimer was born out of the need to address the following real-world problems:</p>
-            <ul>
-                <li><strong>Parking Congestion:</strong> Urban areas face limited parking spaces, resulting in congestion and traffic issues.</li>
-                <li><strong>Environmental Impact:</strong> Endless searching for parking leads to fuel waste and increased pollution.</li>
-                <li><strong>Inefficient Space Management:</strong> Traditional parking lots lack efficient management, causing poor space utilization.</li>
-            </ul>
-            <p>Parkinheimer's Smart Parking System provides real-time slot availability, optimizes space utilization, and offers several advantages for a more convenient, efficient, and sustainable parking experience.</p>
-        </section>
-        <section class="split contact">
-            <section class="alt">
-                <h3>Address</h3>
-                <p>1234 Somewhere Road #87257<br />
-                    Nashville, TN 00000-0000</p>
-            </section>
-            <section>
-                <h3>Phone</h3>
-                <p><a href="#">(000) 000-0000</a></p>
-            </section>
-            <section>
-                <h3>Email</h3>
-                <p><a href="#">info@untitled.tld</a></p>
-            </section>
-            <section>
-                <h3>Social</h3>
-                <ul class="icons alt">
-                    <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                </ul>
-            </section>
-        </section>
-    </footer>
 
     <!-- Copyright -->
     <div id="copyright">
