--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Massively by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 <head>
@@ -72,6 +72,16 @@
                 <li><strong>Inefficient Space Management:</strong> Traditional parking lots lack efficient management, causing poor space utilization.</li>
             </ul>
             <p>Parkinheimer's Smart Parking System provides real-time slot availability, optimizes space utilization, and offers several advantages for a more convenient, efficient, and sustainable parking experience.</p>
+        </section>
+
+        <!-- Video Placeholder -->
+        <section>
+            <h2>Watch Our Video</h2>
+            <!-- Replace the video.mp4 with your actual video file -->
+            <video width="100%" height="auto" controls>
+                <source src="Parkinheimer videos.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </section>
 
         <!-- Footer -->
