--- a/index.html
+++ b/index.html
@@ -74,15 +74,16 @@
             <p>Parkinheimer's Smart Parking System provides real-time slot availability, optimizes space utilization, and offers several advantages for a more convenient, efficient, and sustainable parking experience.</p>
         </section>
 
-        <!-- Video Placeholder -->
-        <section>
-            <h2>Watch Our Video</h2>
-            <!-- Replace the video.mp4 with your actual video file -->
-            <video width="100%" height="auto" controls>
-                <source src="Parkinheimer videos.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </section>
+      <!-- Video Placeholder -->
+<section>
+    <h2>Watch Our Video</h2>
+    <!-- Replace the video path with the correct URL to your video file -->
+    <video width="100%" height="auto" controls>
+        <source src="images/Parkinheimer%20videos.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
+
 
         <!-- Footer -->
         <footer>
