--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h2>Watch Our Video</h2>
     <!-- Replace the video path with the correct URL to your video file -->
     <video width="100%" height="auto" controls>
-        <source src="images/Parkinheimer videos.mp4" type="video/mp4">
+        <source src="images/Parkinheimer Videos.mp4" type="video/mp4">
     </video>
     <p>This video demonstrates our project</p>
 </section>
