--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     html5up.net | @ajlkn
     Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -74,16 +74,15 @@
             <p>Parkinheimer's Smart Parking System provides real-time slot availability, optimizes space utilization, and offers several advantages for a more convenient, efficient, and sustainable parking experience.</p>
         </section>
 
-      <!-- Video Placeholder -->
-<section>
-    <h2>Watch Our Video</h2>
-    <!-- Replace the video path with the correct URL to your video file -->
-    <video width="100%" height="auto" controls>
-        <source src="images/Parkinheimer Videos.mp4" type="video/mp4">
-    </video>
-    <p>This video demonstrates our project</p>
-</section>
-
+        <!-- Video Placeholder -->
+        <section>
+            <h2>Watch Our Video</h2>
+            <!-- Replace the video path with the correct URL to your video file -->
+            <video width="100%" height="auto" controls>
+                <source src="images/Parkinheimer Videos.mp4" type="video/mp4">
+            </video>
+            <p>This video demonstrates our project</p>
+        </section>
 
         <!-- Footer -->
         <footer>
@@ -104,7 +103,10 @@
 
     <!-- Copyright -->
     <div id="copyright">
-        <ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+        <ul>
+            <li>&copy; Untitled</li>
+            <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+        </ul>
     </div>
 
 </div>
