--- a/generic.html
+++ b/generic.html
@@ -4,12 +4,11 @@
     html5up.net | @ajlkn
     Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>About Us</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <title>About Us - Parkinheimer</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -23,21 +22,20 @@
         <a href="index.html" class="logo">Parkinheimer</a>
     </header>
 
-   <!-- Nav -->
-<nav id="nav">
-    <ul class="links">
-        <li><a href="index.html">Home page</a></li>
-        <li><a href="generic.html">About us</a></li>
-        <li><a href="elements.html">Features</a></li>
-    </ul>
-    <ul class="icons">
-        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-        <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-    </ul>
-</nav>
-
+    <!-- Nav -->
+    <nav id="nav">
+        <ul class="links">
+            <li><a href="index.html">Home page</a></li>
+            <li><a href="generic.html">About us</a></li>
+            <li><a href="elements.html">Features</a></li>
+        </ul>
+        <ul class="icons">
+            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+        </ul>
+    </nav>
 
     <!-- Main -->
     <div id="main">
@@ -50,36 +48,39 @@
                 <p>Meet the team behind Parkinheimer, your smart parking solution:</p>
             </header>
 
-            <!-- Team Member 1 -->
-            <div class="team-member">
-                <img src="2x2.jpg" alt="Aadarsha Sunam Pariyar" class="team-img" width="200" height="200" />
-                <h2>Aadarsha Sunam Pariyar</h2>
-                <p>Software Developer & Frontend Developer</p>
-                <p>Aadarsha is a highly skilled software developer with expertise in frontend development. He plays a key role in crafting the user-friendly interface of our smart parking system, ensuring a seamless experience for our users.</p>
-            </div>
+            <!-- Team Members -->
+            <div class="team-member-container">
+                <!-- Team Member 1 -->
+                <div class="team-member">
+                    <img src="2x2.jpg" alt="Aadarsha Sunam Pariyar" class="team-img" width="200" height="200" />
+                    <h2>Aadarsha Sunam Pariyar</h2>
+                    <p>Software Developer & Frontend Developer</p>
+                    <p>Aadarsha is a highly skilled software developer with expertise in frontend development. He plays a key role in crafting the user-friendly interface of our smart parking system, ensuring a seamless experience for our users.</p>
+                </div>
 
-            <!-- Team Member 2 -->
-            <div class="team-member">
-                <img src="images/aswin pic.jpg" alt="Aswin Rai" class="team-img" width="200" height="200"/>
-                <h2>Aswin Rai</h2>
-                <p>Video Editor</p>
-                <p>Aswin is our video editing maestro, responsible for creating captivating visual content that showcases the functionality and benefits of Parkinheimer. His creative touch brings our project to life.</p>
-            </div>
+                <!-- Team Member 2 -->
+                <div class="team-member">
+                    <img src="images/aswin pic.jpg" alt="Aswin Rai" class="team-img" width="200" height="200"/>
+                    <h2>Aswin Rai</h2>
+                    <p>Video Editor</p>
+                    <p>Aswin is our video editing maestro, responsible for creating captivating visual content that showcases the functionality and benefits of Parkinheimer. His creative touch brings our project to life.</p>
+                </div>
 
-            <!-- Team Member 3 -->
-            <div class="team-member">
-                <img src="images/ratik pic.jpg" alt="Ratik Bajracharya" class="team-img" width="200" height="200"/>
-                <h2>Ratik Bajracharya</h2>
-                <p>Hardware Specialist</p>
-                <p>Ratik is our hardware guru, dedicated to optimizing the technical aspects of our smart parking system. His expertise ensures the reliability and efficiency of our hardware components.</p>
-            </div>
+                <!-- Team Member 3 -->
+                <div class="team-member">
+                    <img src="images/ratik pic.jpg" alt="Ratik Bajracharya" class="team-img" width="200" height="200"/>
+                    <h2>Ratik Bajracharya</h2>
+                    <p>Hardware Specialist</p>
+                    <p>Ratik is our hardware guru, dedicated to optimizing the technical aspects of our smart parking system. His expertise ensures the reliability and efficiency of our hardware components.</p>
+                </div>
 
-            <!-- Team Member 4 -->
-            <div class="team-member">
-                <img src="images/shaswat pic.jpg" alt="Shaswat Ghimire" class="team-img" width="200" height="200"/>
-                <h2>Shaswat Ghimire</h2>
-                <p>Logistics Manager</p>
-                <p>Shaswat is the backbone of our logistics operations. He ensures the smooth coordination of resources, from procurement to deployment, making Parkinheimer accessible to all.</p>
+                <!-- Team Member 4 -->
+                <div class="team-member">
+                    <img src="images/shaswat pic.jpg" alt="Shaswat Ghimire" class="team-img" width="200" height="200"/>
+                    <h2>Shaswat Ghimire</h2>
+                    <p>Logistics Manager</p>
+                    <p>Shaswat is the backbone of our logistics operations. He ensures the smooth coordination of resources, from procurement to deployment, making Parkinheimer accessible to all.</p>
+                </div>
             </div>
 
             <!-- Add a link to go back to the home page -->
@@ -102,7 +103,10 @@
 
     <!-- Copyright -->
     <div id="copyright">
-        <ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+        <ul>
+            <li>&copy; Untitled</li>
+            <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+        </ul>
     </div>
 
 </div>
