--- a/generic.html
+++ b/generic.html
@@ -83,6 +83,22 @@
                 </div>
             </div>
 
+            <!-- Contact Us Section -->
+            <section class="split contact">
+                <section class="alt">
+                    <h3>Email</h3>
+                    <p>
+                        <a href="mailto:aadarshsunampariyar@aitm.edu.np">aadarshsunampariyar@aitm.edu.np</a><br />
+                        <a href="mailto:ratik.bajracharya@aitm.edu.np">ratik.bajracharya@aitm.edu.np</a><br />
+                        <a href="mailto:aswin.rai@gmail.com">aswin.rai@gmail.com</a>
+                    </p>
+                </section>
+                <section>
+                    <h3>Address</h3>
+                    <p>Khumaltar, Lalitpur</p>
+                </section>
+            </section>
+
             <!-- Add a link to go back to the home page -->
             <p><a href="index.html">Go back to Home page</a></p>
 
